delete shorts, force url format, some refactoring
