# server/swagger.yaml
@@ -4,9 +4,9 @@ info:
   version: 1.0.0
   description: API for creating, redirecting, modifying, and deleting shortened URLs.
 servers:
-  - url: http://localhost:3001/api/v1
-paths:
-  /create:
+  - url: http://localhost:3000/api/v1
+paths:   
+  /shorts:
     post:
       summary: Create a shortened URL
       requestBody:
@@ -31,7 +31,6 @@ paths:
                 $ref: '#/components/schemas/ShortUrlResponse'
         '429':
           description: Too many requests
-  /shorts:
     get:
       summary: Get all of the shortened urls
       responses:
@@ -43,7 +42,7 @@ paths:
                 $ref: '#/components/schemas/ShortUrlResponse'
         '429':
           description: Too many requests
-  /{shortcode}:
+  /shorts/{shortcode}:
     get:
       summary: Redirect to the original URL using a shortcode
       parameters:
